# Lidar-slam-navigation

./: README.md
robot/: .gitignore  LICENSE  README.md  requirements.txt
robot/config/: nav2_params.yaml
robot/docs/: architecture.md  installation.md  installation.md.docx  user_guide.md
robot/launch/: full_system_launch.py  navigation_launch.py  slam_launch.py
robot/results/trajectories/: trajectories.html
robot/scripts/: run_simulation.sh  setup_environment.sh
robot/scripts/evaluation/: README.md  evo_analysis.py  run_evo.sh
robot/src/navigation/nav2_configs/: nav2_params.yaml
robot/src/robot_description/: CMakeLists.txt  my_robot.urdf.xacro  package.xml
robot/src/robot_description/config/: my_robot_controllers.yaml
robot/src/robot_description/launch/: gazebo.launch.py  rtabmap_fixed.launch.py  rtabmap_lidar_odom.launch.py  rtabmap_mapping.launch.py
robot/src/robot_description/rviz/: display_robot.rviz
robot/src/robot_description/urdf/: common_properties.xacro  gazebo_config.xacro  gazebo_control.xacro  my_robot.urdf.xacro
robot/src/slam/lio_sam/: CMakeLists.txt
robot/src/web_controller/: amcl_tum.txt  convert_model_states_to_kitti.py  ground_truth_synced.txt  initialpose.yaml  lidar_slam_data_visualiser.html  odom_tum.txt  rosbag2_to_tum.py  run_kitti_eval.py  sync_trajectories.py  web_controller.html  web_controller_server.py
robot/src/web_controller/amcl_bag/: amcl_bag_0.db3  metadata.yaml
robot/src/web_controller/amcl_bag1/: amcl_bag1_0.db3  metadata.yaml
robot/src/web_controller/amcl_bag_bag/: amcl_bag_bag_0.db3  metadata.yaml
(+25 files in other folders)
